<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseYourLevel">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonLightLevel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="65dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="65dp"
            android:layout_marginRight="65dp"
            android:layout_marginBottom="31dp"
            android:text="@string/buttonLightLevel"
            app:layout_constraintBottom_toTopOf="@+id/buttonAverageLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonAverageLevel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="65dp"
            android:layout_marginLeft="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginRight="65dp"
            android:layout_marginBottom="31dp"
            android:text="@string/buttonAverageLevel"
            app:layout_constraintBottom_toTopOf="@+id/buttonDifficultLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLightLevel" />

        <Button
            android:id="@+id/buttonDifficultLevel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="65dp"
            android:layout_marginLeft="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginRight="65dp"
            android:layout_marginBottom="132dp"
            android:text="@string/buttonDifficultLevel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAverageLevel" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>